app/assets/stylesheets/application.tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    .editor-container a {
        text-decoration: underline;
        cursor: pointer;

        @apply text-sky-500
    }
}

@layer components {
    body {
        @apply bg-white md:bg-gray-100;
        @apply dark:text-white dark:bg-gray-900;
        @apply antialiased;
    }

    .top-nav-bar {
        @apply bg-white border-gray-200;
        @apply dark:border-gray-500 dark:bg-gray-700;
        @apply border-y-2 px-2 py-2.5;
    }

    .form-section {
        @apply dark:bg-gray-800 bg-white max-w-4xl p-6 md:mt-8 md:rounded-md md:shadow-md md:w-2/3 md:mx-auto lg:w-1/2;
    }

    .form-footer {
        @apply flex justify-end mt-6;
    }

    .button {
        @apply px-6 py-2 leading-5 rounded-md font-semibold inline-flex items-center text-sm ;
    }

    .form-submit {
        @apply button;
        @apply text-white bg-gray-700 hover:bg-gray-600 focus:bg-gray-600;
        @apply dark:bg-gray-500 dark:hover:bg-gray-400 dark:focus:bg-gray-400;
        @apply transition-colors duration-200 transform focus:outline-none;
    }

    .form-input {
        @apply block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full;
        @apply dark:bg-gray-700;
    }

    .form-field {
        @apply my-5;
    }

    .form-header {
        @apply text-lg font-semibold text-gray-700 capitalize dark:text-white;
    }

    .focused-section {
        @apply form-section;
        @apply relative overflow-x-auto;
    }

    .secondary-button {
        @apply button;
        @apply bg-white text-gray-900 hover:bg-gray-100;
        @apply dark:bg-gray-700 dark:text-gray-100 dark:hover:bg-gray-600 dark:hover:bg-gray-600;
        @apply shadow-sm ring-1 ring-inset ring-gray-300;
        @apply dark:ring-0;
    }

    .first-button-group {
        @apply relative inline-flex items-center rounded-l-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-10;
    }

    .dropdown-menu-item {
        @apply block px-4 py-2 text-sm text-gray-700;
    }

    .btn {
        display: inline-block;
        outline: 0;
        cursor: pointer;
        border: 1px solid #1d1c1d4d;
        font-weight: 700;
        background: #fff;
        padding: 0 8px 1px;
        /*font-size: 13px;*/
        border-radius: 4px;
        color: rgb(29, 28, 29);
        height: 28px;
        min-width: 56px;
        transition: all 80ms linear;
        :hover {
            box-shadow: 0 1px 3px 0 rgb(0 0 0 / 8%);
            background: rgba(248, 248, 248, 1);
        }
    }

    .document-toolbar-button {
        /*@apply ml-2 text-blue-600 dark:text-blue-500 hover:underline;*/
        /*@apply ml-2 px-2.5 py-1 bg-blue-500 text-white text-sm rounded;*/
        @apply secondary-button ml-2 text-sm;
    }

    button.document-toolbar-button[disabled] {
        @apply ring-0 bg-gray-100 hover:bg-gray-100 text-slate-400 cursor-not-allowed;
    }

    .link-button {
        @apply font-medium text-blue-600 dark:text-blue-500 hover:underline
    }

    .table-list {
        @apply w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400;
    }

    .table-list thead {
        @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
    }

    .table-list tbody tr {
        @apply bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600;
    }

    .table-list thead tr th {
        @apply px-6 py-3;
    }

    .table-list tbody tr td {
        @apply px-6 py-4;
    }

    .table-list tbody tr th {
        @apply flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white;
    }

    .table-list form.button_to {
        @apply inline-block;
    }
}

